--- a/src/app/Components/dash-board/dash-board.component.html
+++ b/src/app/Components/dash-board/dash-board.component.html
@@ -8,6 +8,26 @@
           <h4 class="text-start dictionary-shadow">--------------------</h4>
         </div>
       </div>
+     <!--  <div id="menu0" class="col-lg-6"> -->
+        <div class="mi1div" name="mi1div">
+          <a href="index7.html" target="_parent"  onclick="window.focus()"><img src="images/fig02_mv.png" title="Videos" border="0" width="70" height="110" name="b1"></a>
+        </div>
+        <div class="mi2div" name="mi2div">
+          <a href="index3.html" target="_parent"  onclick="window.focus()"><img src="images/fig03.png" title="Ilustraciones" border="0" width="70" height="110" name="b2"></a>
+        </div>
+        <div class="mi3div" name="mi3div">
+          <a href="index4.html" target="_parent"  onclick="window.focus()"><img src="images/fig04.png" title="Informaci&oacute;n" border="0" width="70" height="110" name="b3"></a>
+        </div>
+        <div class="mi4div" name="mi4div">
+          <a href="index5.html" target="_parent"  onclick="window.focus()"><img src="images/fig05.png" title="Estad&iacute;sticas" border="0" width="70" height="110" name="b4"></a>
+        </div>
+        <div class="mi5div" name="mi5div">
+          <a href="index6.html" target="_parent"  onclick="window.focus()"><img src="images/fig06.png" title="Ayuda" border="0" width="70" height="110" name="b5"></a>
+        </div>
+        <div class="mi6div" name="mi6div">
+          <a href="salir.cgi" target="_parent"  onclick="window.focus()"><img src="images/fig07a.png" title="Salir" border="0" width="70" height="110" name="b6"></a>
+        </div>
+      </div>
       <div class="col-lg-2">
         <div class="figure-img">
           <img src="./assets/fig07b.png" class="rounded-3 container-fluid p-0" alt="">
@@ -35,7 +55,7 @@
             labelPosition="before"
           >
             <span *ngIf="!(_sharedData.advancedSearchActivated | async); else mode"
-                  class="fw-bold">Búsqueda normal</span>
+                  class="fw-bold">Búsqueda avanzada</span>
             <ng-template #mode>
               <span class="fw-bold">Búsqueda avanzada</span>
             </ng-template>
