--- a/src/app/Components/dash-board/dash-board.component.html
+++ b/src/app/Components/dash-board/dash-board.component.html
@@ -27,7 +27,7 @@
         <div class="mi6div" name="mi6div">
           <a href="salir.cgi" target="_parent"  onclick="window.focus()"><img src="images/fig07a.png" title="Salir" border="0" width="70" height="110" name="b6"></a>
         </div>
-      </div>
+      <!-- </div> -->
       <div class="col-lg-2">
         <div class="figure-img">
           <img src="./assets/fig07b.png" class="rounded-3 container-fluid p-0" alt="">
