prueba de dezpliegue

--- a/src/app/Components/dash-board/dash-board.component.html
+++ b/src/app/Components/dash-board/dash-board.component.html
@@ -8,7 +8,7 @@
           <h4 class="text-start dictionary-shadow">--------------------</h4>
         </div>
       </div>
-     <!--  <div id="menu0" class="col-lg-6">
+       <!-- <div id="menu0" class="col-lg-6 d-md-none">
         <div class="mi1div" name="mi1div">
           <a href="index7.html" target="_parent"  onclick="window.focus()"><img src="./assets/fig02_mv.png" title="Videos" border="0" width="70" height="110" name="b1"></a>
         </div>
@@ -27,8 +27,8 @@
         <div class="mi6div" name="mi6div">
           <a href="salir.cgi" target="_parent"  onclick="window.focus()"><img src="./assets/fig07a.png" title="Salir" border="0" width="70" height="110" name="b6"></a>
         </div>
-       </div> -->
-      <div class="col-lg-2">
+       </div>
+ -->      <div class="col-lg-2">
         <div class="figure-img">
           <img src="./assets/fig07b.png" class="rounded-3 container-fluid p-0" alt="">
         </div>
